Added a lot of things

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>OWNSTRAP</title>
     <link href="style.css" rel="stylesheet">
   </head>
-  <body class="theme-light">
+  <body class="theme-slick-dark">
 
     <center><h1 class="main-text">OWNSTRAP Demo</h1></center>
 
 
     <p class="main-text">Headers with highlight and color.</p>
+    <p class="sub-text">Headers with highlight and color.</p>
     <blockquote>
       <h3 class="main-text text-success bg-success">Hello World!</h3>
       <h3 class="main-text text-warning bg-warning">Hello World!</h3>
